Update CSS to target body instead of all elements
Change CSS selector from universal to body.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Meine Projekte bei Freecodecamp.com</title>
     <style>
-      *{
+      body{
         align: center;
         font-family: comic sans;
       }
