Add link to 'Design a Café Menu' project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org/">www.freecodecamp.org</a>gelernt habe vor.</p>
     <ul>
       <li><a src="business-card.html">Design a Business Card</a></li>
+      <li><a src="cafe_menu.html">Design a Café Menu</a></li>
     </ul>
   </body>
 </html>
