--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   <body>
     <h1>Meine Projekte bei Freecodecamp.com</h1>
     <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org/">www.freecodecamp.org</a>gelernt habe vor.</p>
+
+    <h2>Projekte mit HTML</h2>
+    <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
+    <ul>
+      <li></li>
+    </ul>
+    
+    <h2>Projekte mit CSS</h2>
+    <p>CSS ist das Design der Website und somit sehr spannend für mich.</p>
     <ul>
       <li><a src="business-card.html">Design a Business Card</a></li>
       <li><a src="cafe_menu.html">Design a Café Menu</a></li>
