Add link to styled To-Do List in index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <ul>
       <li><a src="business-card.html">Design a Business Card</a></li>
       <li><a src="cafe_menu.html">Design a Café Menu</a></li>
+      <li><a src="styled_to-do-list.html">Style a To-Do List</a></li>
     </ul>
   </body>
 </html>
