--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Meine Projekte bei Freecodecamp.com</title>
     <style>
       body{
-        align: center;
-        font-family: comic sans;
+        text-align: center;
+        font-family: Arial;
+        background-color: light-grey;
       }
     </style>
   </head>
