Add link to style a Blog Post-Card

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a src="business-card.html">Design a Business Card</a></li>
       <li><a src="cafe_menu.html">Design a Café Menu</a></li>
       <li><a src="styled_to-do-list.html">Style a To-Do List</a></li>
+      <li><a src="blog_post-card.html">Style a Blog Post-Card</a></li>
     </ul>
   </body>
 </html>
