--- a/index.html
+++ b/index.html
@@ -12,22 +12,28 @@
     </style>
   </head>
   <body>
-    <h1>Meine Projekte bei Freecodecamp.com</h1>
-    <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org/">www.freecodecamp.org</a>gelernt habe vor.</p>
-
-    <h2>Projekte mit HTML</h2>
-    <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
-    <ul>
-      <li></li>
-    </ul>
-    
-    <h2>Projekte mit CSS</h2>
-    <p>CSS ist das Design der Website und somit sehr spannend für mich.</p>
-    <ul>
-      <li><a src="business-card.html">Design a Business Card</a></li>
-      <li><a src="cafe_menu.html">Design a Café Menu</a></li>
-      <li><a src="styled_to-do-list.html">Style a To-Do List</a></li>
-      <li><a src="blog_post-card.html">Style a Blog Post-Card</a></li>
-    </ul>
+    <section>
+      <h1>Meine Projekte bei Freecodecamp.com</h1>
+      <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org/">www.freecodecamp.org</a>gelernt habe vor.</p>
+    </section>
+    <section>
+      <h2>Projekte mit HTML</h2>
+      <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
+      <ul>
+        <li></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Projekte mit CSS</h2>
+      <p>CSS ist das Design der Website und somit sehr spannend für mich.</p>
+      <div>
+        <ul>
+          <li><a href="business-card.html">Design a Business Card</a></li>
+          <li><a href="cafe_menu.html">Design a Café Menu</a></li>
+          <li><a href="styled_to-do-list.html">Style a To-Do List</a></li>
+          <li><a href="blog_post-card.html">Style a Blog Post-Card</a></li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
