--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <title>Meine Projekte bei Freecodecamp.com</title>
     <style>
-      body{
+      .title{
         text-align: center;
-        font-family: Arial;
+        font-family: Verdana;
+        font-style: bold;
+        color: burleywood;
         background-color: light-grey;
       }
     </style>
   </head>
   <body>
-    <section>
+    <section class="title">
       <h1>Meine Projekte bei Freecodecamp.com</h1>
       <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org/">www.freecodecamp.org</a>gelernt habe vor.</p>
     </section>
