--- a/business-card.html
+++ b/business-card.html
@@ -49,13 +49,10 @@ a {
     <p class="company">learn @freeCodeCamp</p>
     <hr>
     <p>michaelle.strassegger@yahoo.com</p>
-    <p>0681 12345678</p>
-    <a class="portfolio-link" href="https://www.freecodecamp.org/learn/">Portfolio</a>
+    <a class="portfolio-link" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Portfolio</a>
     <hr>
 <div class="social-media">
     <h2>Connect with me</h2>
-    <a href="https://x.com/">Twitter</a>
-    <a href="https://at.linkedin.com/">LinkedIn</a>
     <a href="https://github.com/michaellestrassegger">GitHub</a>
 </div>
 </div>
