Update links in styled_to-do-list.html

--- a/styled_to-do-list.html
+++ b/styled_to-do-list.html
@@ -39,7 +39,7 @@ a:active{
             <label for="cleaning">Cleaning done</label>
             <ul class="sub-item">
                 <li>
-                    <a class="sub-item-link" href="https://www.freecodecamp.org/learn/full-stack-developer/lab-stylized-to-do-list/build-a-stylized-to-do-list" target="_blank">Cleaning Plan</a>
+                    <a class="sub-item-link" href="https://www.freecodecamp.org" target="_blank">Cleaning Plan</a>
         </li>
            </ul>
            <li>
@@ -47,7 +47,7 @@ a:active{
             <label for="weels">Winter weels</label>
             <ul class="sub-item">
                 <li>
-                    <a class="sub-item-link" href="https://www.freecodecamp.org/learn/full-stack-developer/lab-stylized-to-do-list/build-a-stylized-to-do-list" target="_blank">Mecanic</a>
+                    <a class="sub-item-link" href="https://www.freecodecamp.org" target="_blank">Mecanic</a>
         </li>
            </ul>
            <li>
@@ -55,7 +55,7 @@ a:active{
             <label for="clothes">Hang up Clothes</label>
             <ul class="sub-item">
                 <li>
-                    <a class="sub-item-link" href="https://www.freecodecamp.org/learn/full-stack-developer/lab-stylized-to-do-list/build-a-stylized-to-do-list" target="_blank">Washing Maschine</a>
+                    <a class="sub-item-link" href="https://www.freecodecamp.org" target="_blank">Washing Maschine</a>
         </li>
            </ul>
            <li>
@@ -63,7 +63,7 @@ a:active{
             <label for="cook">Cook</label>
             <ul class="sub-item">
                 <li>
-                    <a class="sub-item-link" href="https://www.freecodecamp.org/learn/full-stack-developer/lab-stylized-to-do-list/build-a-stylized-to-do-list" target="_blank">Recipe Book</a>
+                    <a class="sub-item-link" href="https://www.freecodecamp.org" target="_blank">Recipe Book</a>
         </li>
            </ul>
     </ul>
