--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
       .title{
         text-align: center;
         font-family: Verdana;
-        font-style: bold;
-        color: burleywood;
-        background-color: light-grey;
+        color: darkblue;
+        background-color: lightblue;
       }
     </style>
   </head>
   <body>
     <section class="title">
       <h1>Meine Projekte bei Freecodecamp.com</h1>
-      <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org target="_blank">www.freecodecamp.org</a>gelernt habe vor.</p>
+      <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org target="_blank">www.freecodecamp.org</a> gelernt habe vor.</p>
     </section>
     <section>
       <h2>Projekte mit HTML</h2>
