Enhance title styling with margin and border
Added margin and border styles to the title class.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         font-family: Verdana;
         color: darkblue;
         background-color: lightblue;
+        margin-top: 50px;
+        border: solid; 
+        border-color: darkblue;
+      }
+      body{
+        margin-left: 50px;
+        background-color: lightgrey;
+        font-family: Verdana;
       }
     </style>
   </head>
