--- a/index.html
+++ b/index.html
@@ -29,20 +29,19 @@
       <h2>Projekte mit HTML</h2>
       <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
       <ul>
-        <li></li>
+        <li><a href="sheldue_table.html">Build a Sheldue Table</a></li>
+        <li><a href="checkout_page.html">Build a Checkout-Page</a></li>
       </ul>
     </section>
     <section>
       <h2>Projekte mit CSS</h2>
       <p>CSS ist das Design der Website und somit sehr spannend für mich.</p>
-      <div>
         <ul>
           <li><a href="business-card.html">Design a Business Card</a></li>
           <li><a href="cafe_menu.html">Design a Café Menu</a></li>
           <li><a href="styled_to-do-list.html">Style a To-Do List</a></li>
           <li><a href="blog_post-card.html">Style a Blog Post-Card</a></li>
         </ul>
-      </div>
     </section>
   </body>
 </html>
