Add link to movie review page in index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <ul>
         <li><a href="sheldue_table.html">Build a Sheldue Table</a></li>
         <li><a href="checkout_page.html">Build a Checkout-Page</a></li>
+        <li><a href="movie_review.html">Design a Movie Review Page</a></li>
       </ul>
     </section>
     <section>
