--- a/index.html
+++ b/index.html
@@ -29,20 +29,21 @@
       <h2>Projekte mit HTML</h2>
       <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
       <ul>
-        <li><a href="sheldue_table.html">Build a Sheldue Table</a></li>
-        <li><a href="checkout_page.html">Build a Checkout-Page</a></li>
-        <li><a href="movie_review.html">Design a Movie Review Page</a></li>
+        <li><a href="sheldue_table.html">Sheldue Table</a></li>
+        <li><a href="checkout_page.html">Checkout-Page</a></li>
+        <li><a href="movie_review.html">Movie Review Page</a></li>
         <li><a href="multimedia_player.html">Multimedia Player</a></li>
+        <li><a href="book_katalog.html">Book Katalog</a></li>
       </ul>
     </section>
     <section>
       <h2>Projekte mit CSS</h2>
       <p>CSS ist das Design der Website und somit sehr spannend für mich.</p>
         <ul>
-          <li><a href="business-card.html">Design a Business Card</a></li>
-          <li><a href="cafe_menu.html">Design a Café Menu</a></li>
-          <li><a href="styled_to-do-list.html">Style a To-Do List</a></li>
-          <li><a href="blog_post-card.html">Style a Blog Post-Card</a></li>
+          <li><a href="business-card.html">Business Card</a></li>
+          <li><a href="cafe_menu.html">Café Menu</a></li>
+          <li><a href="styled_to-do-list.html">To-Do List</a></li>
+          <li><a href="blog_post-card.html">Blog Post-Card</a></li>
         </ul>
     </section>
   </body>
