Add links to Survey Form and reorder list items

--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
       <h2>Projekte mit HTML</h2>
       <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
       <ul>
-        <li><a href="sheldue_table.html">Sheldue Table</a></li>
-        <li><a href="checkout_page.html">Checkout-Page</a></li>
+        <li><a href="survey_form.html">Survey Form</a></li>
         <li><a href="movie_review.html">Movie Review Page</a></li>
         <li><a href="multimedia_player.html">Multimedia Player</a></li>
         <li><a href="book_katalog.html">Book Katalog</a></li>
+        <li><a href="sheldue_table.html">Sheldue Table</a></li>
+        <li><a href="checkout_page.html">Checkout-Page</a></li>
+        
       </ul>
     </section>
     <section>
