--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <h2>Projekte mit HTML</h2>
       <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
       <ul>
+        <li><a href="cat-page.html">Cat Page</a></li>
         <li><a href="exams_table.html">Exams Table</a></li>
         <li><a href="survey_form.html">Survey Form</a></li>
         <li><a href="movie_review.html">Movie Review Page</a></li>
