--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <h2>Projekte mit HTML</h2>
       <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
       <ul>
+        <li><a href="travel-agency.html">Travel Agency Page</a></li>
         <li><a href="recipe-page.html">Recipe Page</a></li>
         <li><a href="event-hub.html">Event Hub</a></li>
         <li><a href="cat-page.html">Cat Page</a></li>
