--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li><a href="travel-agency.html">Travel Agency Page</a></li>
         <li><a href="recipe-page.html">Recipe Page</a></li>
         <li><a href="html_player.html">HTML Video and Audio Player</a></li>
+        <li><a href="video_compilation.html">Video Compilation Page</a></li>
         <li><a href="event-hub.html">Event Hub</a></li>
         <li><a href="cat-page.html">Cat Page</a></li>
         <li><a href="exams_table.html">Exams Table</a></li>
