--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         
         <hr>
         <li><a href="html_player.html">HTML Video and Audio Player</a></li>
+        <li><a href="video_dispay.html">Video Display using Iframe</a></li>
         <li><a href="video_compilation.html">Video Compilation Page</a></li>
        <li><a href="multimedia_player.html">Multimedia Player</a></li>
         <hr>
