--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <li><a href="recipe-page.html">Recipe Page</a></li>
         <li><a href="travel-agency.html">Travel Agency Page</a></li>
         <li><a href="cat-page.html">Cat Page</a></li>
+        <li><a href="heart_icon.html">Heart Icon <svg width="24" height="24" viewBox="0 0 24 24" fill="red">
+      <path
+        d="M12 21s-6-4.35-9.33-8.22C-.5 7.39 3.24 1 8.4 4.28 10.08 5.32 12 7.5 12 7.5s1.92-2.18 3.6-3.22C20.76 1 24.5 7.39 21.33 12.78 18 16.65 12 21 12 21z"
+      ></path>
+    </svg></a></li>
         <hr>
         <li><a href="feedback_form.html">Hotel Feedback Form</a></li>
         <li><a href="checkout_page.html">Checkout-Page</a></li>
