--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       }
     </style>
   </head>
+   <header>
+     <nav>
+       <a href="https://michaellestrassegger.github.io/mywebsite/index.html">Home</a>
+       <a href="https://michaellestrassegger.github.io/mywebsite/projekte.html">Projekte</a>
+       <a href="https://michaellestrassegger.github.io/mywebsite/lebenslauf.html">Lebenslauf</a>
+     </nav>
+  </header>
   <body>
     <section class="title">
       <h1>Meine Projekte bei Freecodecamp.com</h1>
