--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <li><a href="cafe_menu.html">Café Menu</a></li>
           <li><a href="styled_to-do-list.html">To-Do List</a></li>
           <li><a href="blog_post-card.html">Blog Post-Card</a></li>
+          <li><a href="event-flyer.html">Event Flyer</a></li>
         </ul>
     </section>
   </body>
