Add links for Greeting Card and Job Application Form

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
           <li><a href="styled_to-do-list.html">To-Do List</a></li>
           <li><a href="blog_post-card.html">Blog Post-Card</a></li>
           <li><a href="event-flyer.html">Event Flyer</a></li>
+          <li><a href="greeting-card.html">Greeting Card</a></li>
+          <li><a href="job-application-form.html">Job Application Form</a></li>
         </ul>
     </section>
   </body>
