--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
           <li><a href="event-flyer.html">Event Flyer</a></li>
           <li><a href="greeting-card.html">Greeting Card</a></li>
           <li><a href="job-application-form.html">Job Application Form</a></li>
+          <hr>
+          <li><a href="colored-markers.html">Colored Marker</a></li>
         </ul>
     </section>
   </body>
