--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
           <li><a href="job-application-form.html">Job Application Form</a></li>
           <hr>
           <li><a href="colored-markers.html">Colored Marker</a></li>
+          <li><a href="colored-boxes.html">Colored Boxes</a></li>
         </ul>
     </section>
   </body>
