--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
           <hr>
           <li><a href="colored-markers.html">Colored Marker</a></li>
           <li><a href="colored-boxes.html">Colored Boxes</a></li>
+          <hr>
+          <li><a href="registration-form">Registration Form</a></li>
         </ul>
     </section>
   </body>
