--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
           <li><a href="colored-markers.html">Colored Marker</a></li>
           <li><a href="colored-boxes.html">Colored Boxes</a></li>
           <hr>
-          <li><a href="registration-form">Registration Form</a></li>
+          <li><a href="registration-form.html">Registration Form</a></li>
+          <li><a href="contact-form.html">Contact Form</a></li>
         </ul>
     </section>
   </body>
