--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <hr>
           <li><a href="registration-form.html">Registration Form</a></li>
           <li><a href="contact-form.html">Contact Form</a></li>
-          <li><a hrefe="experiment.html">Experiment</a></li>
+          <li><a href="experiment.html">Experiment</a></li>
         </ul>
     </section>
   </body>
