--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           <hr>
           <li><a href="registration-form.html">Registration Form</a></li>
           <li><a href="contact-form.html">Contact Form</a></li>
+          <li><a href="rothko-painting.html">Rothko Painting</a></li>
         </ul>
     </section>
   </body>
