--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           <li><a href="registration-form.html">Registration Form</a></li>
           <li><a href="contact-form.html">Contact Form</a></li>
           <li><a href="rothko-painting.html">Rothko Painting</a></li>
+          <li><a href="confidential-email.html">Confidential E-Mail</a></li>
         </ul>
     </section>
   </body>
