--- a/index.html
+++ b/index.html
@@ -4,20 +4,53 @@
     <meta charset="utf-8">
     <title>Meine Projekte bei Freecodecamp.com</title>
     <style>
-      .title{
-        text-align: center;
-        font-family: Verdana;
-        color: darkblue;
-        background-color: lightblue;
+     ody{
         margin-top: 50px;
-        border: solid; 
-        border-color: darkblue;
+        margin-left: 200px;
+        margin-right: 200px;
+        font-family: Times New Roman;
+        text-align: left;
+        background: linear-gradient(to right, lightpink, white, skyblue);
       }
-      body{
-        margin-left: 50px;
-        background-color: lightgrey;
-        font-family: Verdana;
+
+nav{
+        margin-top: 20px;
+        text-align: right;
+        text-decoration: none;
+        color: purple;
       }
+
+img{
+        max-width: 300px;
+        height: auto;
+        border-radius: 90px;
+        border: solid white 1px;
+        filter: grayscale(70%);
+        float: right;
+        padding: 40px;
+        margin: 10px;
+      }
+
+.button{
+      font-size: 25px;
+      border: 2px solid darkblue;
+      background-color: linear-gradient(to right, lightpink, white, skyblue);
+      padding: 5px;
+      margin: 20px;
+    }
+
+.button:hover{
+      transform: scale(1.1);
+      background-color: lightpink;
+    }
+
+    .own{
+      text-align: left;
+    }
+
+div{
+ margin: 20px 200px;
+}
     </style>
   </head>
    <header>
