--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ div{
         d="M12 21s-6-4.35-9.33-8.22C-.5 7.39 3.24 1 8.4 4.28 10.08 5.32 12 7.5 12 7.5s1.92-2.18 3.6-3.22C20.76 1 24.5 7.39 21.33 12.78 18 16.65 12 21 12 21z"
       ></path>
     </svg></a></li>
+        <li><a href="major-browser-list.html">Major Browser List</a></li>
         <br>
         <li><a href="feedback_form.html">Hotel Feedback Form</a></li>
         <li><a href="checkout_page.html">Checkout-Page</a></li>
