--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@ img{
       text-align: left;
     }
 
-div{
- margin: 20px 200px;
-}
-    </style>
+    div{
+      margin: 20px 200px;
+  </style>
   </head>
    <header>
      <nav>
@@ -63,7 +62,9 @@ div{
      </nav>
   </header>
   <body>
-    <section class="title">
+    <div>
+      
+  <section class="title">
       <h1>Meine Projekte bei Freecodecamp.com</h1>
       <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org target="_blank">www.freecodecamp.org</a> gelernt habe vor.</p>
     </section>
@@ -120,5 +121,6 @@ div{
           <li><a href="confidential-email.html">Confidential E-Mail</a></li>
         </ul>
     </section>
+    </div>
   </body>
 </html>
