--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Meine Projekte bei Freecodecamp.com</title>
     <style>
-     ody{
+body{
         margin-top: 50px;
         margin-left: 200px;
         margin-right: 200px;
@@ -29,27 +29,11 @@ img{
         float: right;
         padding: 40px;
         margin: 10px;
-      }
-
-.button{
-      font-size: 25px;
-      border: 2px solid darkblue;
-      background-color: linear-gradient(to right, lightpink, white, skyblue);
-      padding: 5px;
-      margin: 20px;
-    }
-
-.button:hover{
-      transform: scale(1.1);
-      background-color: lightpink;
-    }
-
-    .own{
-      text-align: left;
-    }
-
+}
+      
     div{
       margin: 20px 200px;
+    }
   </style>
   </head>
    <header>
