--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@ img{
         <li><a href="recipe-page.html">Recipe Page</a></li>
         <li><a href="travel-agency.html">Travel Agency Page</a></li>
         <li><a href="cat-page.html">Cat Page</a></li>
-        <li><a href="heart_icon.html">Heart Icon <svg width="24" height="24" viewBox="0 0 24 24" fill="red">
-      <path
-        d="M12 21s-6-4.35-9.33-8.22C-.5 7.39 3.24 1 8.4 4.28 10.08 5.32 12 7.5 12 7.5s1.92-2.18 3.6-3.22C20.76 1 24.5 7.39 21.33 12.78 18 16.65 12 21 12 21z"
-      ></path>
-    </svg></a></li>
         <li><a href="major-browser-list.html">Major Browser List</a></li>
+        <li><a href="event-hub.html">Event Hub</a></li>
+        <li><a href="movie_review.html">Movie Review Page</a></li>
+        <li><a href="quincys-job-tips.html">Quincy's Job Tips</a></li>
+        <li><a href="heart_icon.html">Heart Icon <svg width="24" height="24" viewBox="0 0 24 24" fill="red">
+          <path d="M12 21s-6-4.35-9.33-8.22C-.5 7.39 3.24 1 8.4 4.28 10.08 5.32 12 7.5 12 7.5s1.92-2.18 3.6-3.22C20.76 1 24.5 7.39 21.33 12.78 18 16.65 12 21 12 21z"></path>
+    </svg></a></li>
         <br>
         <li><a href="feedback_form.html">Hotel Feedback Form</a></li>
         <li><a href="checkout_page.html">Checkout-Page</a></li>
@@ -76,9 +77,7 @@ img{
         <li><a href="video_compilation.html">Video Compilation Page</a></li>
        <li><a href="multimedia_player.html">Multimedia Player</a></li>
         <br>
-        <li><a href="event-hub.html">Event Hub</a></li>
         <li><a href="exams_table.html">Exams Table</a></li>
-        <li><a href="movie_review.html">Movie Review Page</a></li>
         <li><a href="book_katalog.html">Book Katalog</a></li>
         <li><a href="sheldue_table.html">Sheldue Table</a></li>
       </ul>
@@ -98,10 +97,10 @@ img{
           <hr>
           <li><a href="colored-markers.html">Colored Marker</a></li>
           <li><a href="colored-boxes.html">Colored Boxes</a></li>
+          <li><a href="rothko-painting.html">Rothko Painting</a></li>
           <hr>
           <li><a href="registration-form.html">Registration Form</a></li>
-          <li><a href="contact-form.html">Contact Form</a></li>
-          <li><a href="rothko-painting.html">Rothko Painting</a></li>
+          <li><a href="contact-form.html">Contact Form</a></li> 
           <li><a href="confidential-email.html">Confidential E-Mail</a></li>
         </ul>
     </section>
