--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ img{
         <li><a href="html_player.html">HTML Video and Audio Player</a></li>
         <li><a href="video_dispay.html">Video Display using Iframe</a></li>
         <li><a href="video_compilation.html">Video Compilation Page</a></li>
-       <li><a href="multimedia_player.html">Multimedia Player</a></li>
+        <li><a href="multimedia_player.html">Multimedia Player</a></li>
+        <li><a href="accessible-audio-controller.html>Audio Controller"</a></li>
         <br>
         <li><a href="exams_table.html">Exams Table</a></li>
         <li><a href="book_katalog.html">Book Katalog</a></li>
