--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ img{
         <li><a href="video_dispay.html">Video Display using Iframe</a></li>
         <li><a href="video_compilation.html">Video Compilation Page</a></li>
         <li><a href="multimedia_player.html">Multimedia Player</a></li>
-        <li><a href="accessible-audio-controller.html>Audio Controller"</a></li>
+        <li><a href="accessible-audio-controller.html">Audio Controller</a></li>
         <br>
         <li><a href="exams_table.html">Exams Table</a></li>
         <li><a href="book_katalog.html">Book Katalog</a></li>
@@ -103,6 +103,7 @@ img{
           <li><a href="registration-form.html">Registration Form</a></li>
           <li><a href="contact-form.html">Contact Form</a></li> 
           <li><a href="confidential-email.html">Confidential E-Mail</a></li>
+          <li><a href="game-settings-panel.html">Game Settings Panel</a></li>
         </ul>
     </section>
     </div>
