--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ img{
     div{
       margin: 20px 200px;
     }
+      a{
+        color: pink;
+      }
+      a:hover, a:clicked{
+        color: lightpink;
+      }
   </style>
   </head>
  <header>
