--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@ img{
       margin: 20px 200px;
     }
       a{
-        color: pink;
+ text-decoration: none;       
+ color: pink;
       }
-      a:hover, a:clicked{
-        color: lightpink;
+a:hover, a:clicked{
+  color: lightpink;
+  text-decoration: none;     
       }
   </style>
   </head>
