--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ img{
         max-width: 300px;
         height: auto;
         border-radius: 90px;
-        border: solid white 1px;
+        border: solid pink 1px;
         filter: grayscale(70%);
         float: right;
         padding: 40px;
@@ -39,7 +39,7 @@ img{
  color: pink;
       }
 a:hover, a:clicked{
-  color: lightpink;
+  color: darkmagenta;
   text-decoration: none;     
       }
   </style>
