--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Meine Projekte bei Freecodecamp.com</title>
     <style>
 body{
-        margin-top: 50px;
+  color: purple;      
+  margin-top: 50px;
         margin-left: 200px;
         margin-right: 200px;
         font-family: Times New Roman;
