--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@ img{
     div{
       margin: 20px 200px;
     }
-      a{
- text-decoration: none;       
+      a{       
  color: deeppink;
       }
-a:hover, a:clicked{
-  color: darkmagenta;
-  text-decoration: none;     
+a:clicked{
+  color: purple;    
       }
   </style>
   </head>
