--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ img{
           <li><a href="contact-form.html">Contact Form</a></li> 
           <li><a href="confidential-email.html">Confidential E-Mail</a></li>
           <li><a href="game-settings-panel.html">Game Settings Panel</a></li>
+          <hr>
+          <li><a href="flexbox_gallery">Flexbox Photo Gallery</a></li>
         </ul>
     </section>
     </div>
