--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ img{
           <li><a href="confidential-email.html">Confidential E-Mail</a></li>
           <li><a href="game-settings-panel.html">Game Settings Panel</a></li>
           <br>
-          <li><a href="flexbox_gallery">Flexbox Photo Gallery</a></li>
+          <li><a href="flexbox_gallery.html">Flexbox Photo Gallery</a></li>
+          <li><a href="playing-cards.html">Flexbox Playing Cards</a></li>
         </ul>
     </section>
     </div>
