--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Meine Projekte bei Freecodecamp.com</title>
     <style>
 body{
-  color: purple;      
+  color: rebeccapurple;      
   margin-top: 50px;
         margin-left: 200px;
         margin-right: 200px;
@@ -18,7 +18,7 @@ nav{
         margin-top: 20px;
         text-align: right;
         text-decoration: none;
-        color: purple;
+        color: rebeccapurple;
       }
 
 img{
@@ -35,6 +35,9 @@ img{
     div{
       margin: 20px 200px;
     }
+      a:visited{
+        color: purple;
+      }
   </style>
   </head>
  <header>
