--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ img{
       
   <section class="title">
       <h1>Meine Projekte bei Freecodecamp.com</h1>
-      <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org >www.freecodecamp.org"</a> gelernt habe vor.</p>
+      <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> gelernt habe vor.</p>
     </section>
     <section>
       <h2>Projekte mit HTML</h2>
