--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@ img{
           <br>
           <li><a href="flexbox_gallery.html">Flexbox Photo Gallery</a></li>
           <li><a href="playing-cards.html">Flexbox Playing Cards</a></li>
+          <br>
+          <li><a href="nutritional-label.html">Nutritional Label</a></li>
         </ul>
     </section>
     </div>
