--- a/styled_to-do-list.html
+++ b/styled_to-do-list.html
@@ -32,30 +32,29 @@ a:active{
 </head>
 
 <body>
-    <h1>To Dos Oktober</h1>
+    <h1>To Dos</h1>
     <ul class="todo-list">
         <li>
             <input type="checkbox" id="cleaning">
-            <label for="cleaning">Cleaning done</label>
+            <label for="cleaning">Read the Tips</label>
             <ul class="sub-item">
                 <li>
-                    <a class="sub-item-link" href="https://www.freecodecamp.org" target="_blank">Cleaning Plan</a>
+                    <a class="sub-item-link" href="quincys-job-tips.html" target="_blank">Quincy's Job Tips</a>
         </li>
            </ul>
            <li>
             <input type="checkbox" id="weels">
-            <label for="weels">Winter weels</label>
+            <label for="weels">Get a Job</label>
             <ul class="sub-item">
                 <li>
-                    <a class="sub-item-link" href="https://www.freecodecamp.org" target="_blank">Mecanic</a>
-        </li>
+                    <a class="sub-item-link" href="job-application-form.html">Job Application Form</a>
            </ul>
            <li>
             <input type="checkbox" id="clothes">
-            <label for="clothes">Hang up Clothes</label>
+            <label for="clothes">Give Feedback</label>
             <ul class="sub-item">
                 <li>
-                    <a class="sub-item-link" href="https://www.freecodecamp.org" target="_blank">Washing Maschine</a>
+                    <a class="sub-item-link" href="feedback_form.html" target="_blank">Feedback Form</a>
         </li>
            </ul>
            <li>
@@ -63,7 +62,7 @@ a:active{
             <label for="cook">Cook</label>
             <ul class="sub-item">
                 <li>
-                    <a class="sub-item-link" href="https://www.freecodecamp.org" target="_blank">Recipe Book</a>
+                    <a class="sub-item-link" href="recipe-page.html" target="_blank">Recipe "Grießkoch"</a>
         </li>
            </ul>
     </ul>
