--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ img{
           <li><a href="playing-cards.html">Flexbox Playing Cards</a></li>
           <br>
           <li><a href="nutritional-label.html">Nutritional Label</a></li>
+          <li><a href="newspaper-article.html">Newspaper Article</a></li>
         </ul>
     </section>
     </div>
