--- a/index.html
+++ b/index.html
@@ -62,68 +62,104 @@ img{
     <div>
       
   <section class="title">
-      <h1>Meine Projekte bei Freecodecamp.com</h1>
-      <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> gelernt habe vor.</p>
-    </section>
+    <h1>Meine Projekte bei Freecodecamp.com</h1>
+    <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> gelernt habe vor.</p>
+  </section>
     <section>
       <h2>Projekte mit HTML</h2>
       <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
+      <h3>Basic HTML</h3>
+      <p>HTML Attributes, HTML Boilerplate, HTML Fundamentals, Audio and Video Elements, Images and SVGs, iframe Element and Links</p>
       <ul>
         <li><a href="cat_photo_app.html">Cat Photo App</a></li>
         <li><a href="recipe-page.html">Recipe Page</a></li>
         <li><a href="travel-agency.html">Travel Agency Page</a></li>
-        <li><a href="cat-page.html">Cat Page</a></li>
-        <li><a href="major-browser-list.html">Major Browser List</a></li>
-        <li><a href="event-hub.html">Event Hub</a></li>
-        <li><a href="movie_review.html">Movie Review Page</a></li>
-        <li><a href="quincys-job-tips.html">Quincy's Job Tips</a></li>
         <li><a href="heart_icon.html">Heart Icon <svg width="24" height="24" viewBox="0 0 24 24" fill="red">
           <path d="M12 21s-6-4.35-9.33-8.22C-.5 7.39 3.24 1 8.4 4.28 10.08 5.32 12 7.5 12 7.5s1.92-2.18 3.6-3.22C20.76 1 24.5 7.39 21.33 12.78 18 16.65 12 21 12 21z"></path>
     </svg></a></li>
-        <br>
-        <li><a href="feedback_form.html">Hotel Feedback Form</a></li>
-        <li><a href="checkout_page.html">Checkout-Page</a></li>
-        <li><a href="survey_form.html">Survey Form</a></li>
-        <br>
         <li><a href="html_player.html">HTML Video and Audio Player</a></li>
         <li><a href="video_dispay.html">Video Display using Iframe</a></li>
         <li><a href="video_compilation.html">Video Compilation Page</a></li>
-        <li><a href="multimedia_player.html">Multimedia Player</a></li>
-        <li><a href="accessible-audio-controller.html">Audio Controller</a></li>
-        <br>
+      </ul>
+      <h3>Semantic HTML</h3>
+      <p>Importance of Semantic HTML, Nuanced Semantic Elements, Text and Time Semantic Elements and Specialized Semantic Elements</p>
+      <ul>  
+        <li><a href="cat-page.html">Cat Page</a></li>
+        <li><a href="event-hub.html">Event Hub</a></li>
+        <li><a href="major-browser-list.html">Major Browser List</a></li>
+        <li><a href="quincys-job-tips.html">Quincy's Job Tips</a></li>
+       </ul>
+      <h3>Forms and Tables</h3>
+      <p>Forms, Tables and HTML Tools</p>
+      <ul> 
+        <li><a href="feedback_form.html">Hotel Feedback Form</a></li>
+        <li><a href="survey_form.html">Survey Form</a></li>
         <li><a href="exams_table.html">Exams Table</a></li>
         <li><a href="book_katalog.html">Book Katalog</a></li>
+      </ul>
+      <h3>Accessibility</h3>
+      <p>Importance of Accessibility and Good HTML Structure, Accessible Tables and Forms, ARIA and Accessible Media Elements</p>
+      <ul>
         <li><a href="sheldue_table.html">Sheldue Table</a></li>
+        <li><a href="movie_review.html">Movie Review Page</a></li>
+        <li><a href="checkout_page.html">Checkout-Page</a></li>
+        <li><a href="multimedia_player.html">Multimedia Player</a></li>
+        <li><a href="accessible-audio-controller.html">Audio Controller</a></li>
       </ul>
     </section>
-    <hr>
     <section>
       <h2>Projekte mit CSS</h2>
       <p>CSS ist das Design der Website und somit sehr spannend für mich.</p>
-        <ul>
+      <h3>Computer Basics</h3>
+      <p>Computer, Internet and Tooling Basics, File Systems and Browsing the Web Effectively</p>
+      <h3>Basic CSS</h3>
+      <p>CSS, CSS Specificity, Cascade Algorithm and Inheritance, Styling Lists and Links and Backgrounds and Borders</p>
+      <ul>
           <li><a href="business-card.html">Business Card</a></li>
           <li><a href="cafe_menu.html">Café Menu</a></li>
           <li><a href="styled_to-do-list.html">To-Do List</a></li>
           <li><a href="blog_post-card.html">Blog Post-Card</a></li>
+      </ul>
+      <h3>Design</h3>
+      <p>User Interface Design Fundamentals, User-Centered Design, Common Design Tools</p>
+      <h3>Absolut and relative Units</h3>
+      <ul>
           <li><a href="event-flyer.html">Event Flyer</a></li>
+      </ul>
+      <h3>Pseudo Classes and Elements</h3>
+      <ul>
           <li><a href="greeting-card.html">Greeting Card</a></li>
           <li><a href="job-application-form.html">Job Application Form</a></li>
-          <br>
+      </ul>
+      <h3>Colors</h3>
+      <ul>
           <li><a href="colored-markers.html">Colored Marker</a></li>
           <li><a href="colored-boxes.html">Colored Boxes</a></li>
-          <li><a href="rothko-painting.html">Rothko Painting</a></li>
-          <br>
+      </ul>
+      <h3>Styling Forms</h3>
+      <ul>
           <li><a href="registration-form.html">Registration Form</a></li>
           <li><a href="contact-form.html">Contact Form</a></li> 
-          <li><a href="confidential-email.html">Confidential E-Mail</a></li>
           <li><a href="game-settings-panel.html">Game Settings Panel</a></li>
-          <br>
-          <li><a href="flexbox_gallery.html">Flexbox Photo Gallery</a></li>
+          <li>Feature Selection Page ???</li>
+      </ul>
+      <h3>Box Model</h3>
+      <p>CSS Transforms, Overflow and Filters</p>
+      <ul>
+        <li><a href="rothko-painting.html">Rothko Painting</a></li>
+        <li><a href="confidential-email.html">Confidential E-Mail</a></li>
+      </ul>
+      <h3>Flexbox</h3>
+      <ul>  
+        <li><a href="flexbox_gallery.html">Flexbox Photo Gallery</a></li>
           <li><a href="playing-cards.html">Flexbox Playing Cards</a></li>
-          <br>
-          <li><a href="nutritional-label.html">Nutritional Label</a></li>
-          <li><a href="newspaper-article.html">Newspaper Article</a></li>
-        </ul>
+      </ul>
+      <h3>Typography</h3>
+      <p>CSS Fonds</p>
+      <ul>
+        <li><a href="nutritional-label.html">Nutritional Label</a></li>
+        <li><a href="newspaper-article.html">Newspaper Article</a></li>
+      </ul>
     </section>
     </div>
   </body>
