--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@ img{
       </nav>
     </header>
   <body>
-    <div>
-      
   <section class="title">
     <h1>Meine Projekte bei Freecodecamp.com</h1>
     <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> gelernt habe vor.</p>
   </section>
-    <section>
+  <section>
       <h2>Projekte mit HTML</h2>
       <p>HTML ist das Grundgerüst der Website und dadurch existenziell wichtig.</p>
       <h3>Basic HTML</h3>
@@ -109,8 +107,8 @@ img{
         <li><a href="multimedia_player.html">Multimedia Player</a></li>
         <li><a href="accessible-audio-controller.html">Audio Controller</a></li>
       </ul>
-    </section>
-    <section>
+  </section>
+  <section>
       <h2>Projekte mit CSS</h2>
       <p>CSS ist das Design der Website und somit sehr spannend für mich.</p>
       <h3>Computer Basics</h3>
@@ -144,7 +142,7 @@ img{
           <li><a href="registration-form.html">Registration Form</a></li>
           <li><a href="contact-form.html">Contact Form</a></li> 
           <li><a href="game-settings-panel.html">Game Settings Panel</a></li>
-          <li>Feature Selection Page ???</li>
+          <li><a href="feature-selection.html">Feature Selection Page</a></li>
       </ul>
       <h3>Box Model</h3>
       <p>CSS Transforms, Overflow and Filters</p>
@@ -164,6 +162,5 @@ img{
         <li><a href="newspaper-article.html">Newspaper Article</a></li>
       </ul>
     </section>
-    </div>
   </body>
 </html>
