--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ nav{
         text-align: right;
         text-decoration: none;
         color: rebeccapurple;
+        font-size: 3em;
       }
 
 img{
