--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ img{
   <body>
   <section class="title">
     <h1>Meine Projekte bei Freecodecamp.com</h1>
-    <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> gelernt habe vor.</p>
+    <p>Hier stelle ich dir alle Projekte, welche ich bei der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> gelernt habe vor, ich führe aber auch die Basiskenntnisse an, welche in dem jeweiligen
+    Modul gelernt wurde.</p>
   </section>
   <section>
       <h2>Projekte mit HTML</h2>
