--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ img{
       <p>Forms, Tables and HTML Tools</p>
       <ul> 
         <li><a href="feedback_form.html">Hotel Feedback Form</a></li>
-        <li><a href="survey_form.html">Survey Form</a></li>
+        <li><a href="survey_form.html">Survey Form</a><a href="#certification">Certification Projekt*</a></li>
         <li><a href="exams_table.html">Exams Table</a></li>
         <li><a href="book_katalog.html">Book Katalog</a></li>
       </ul>
@@ -165,4 +165,5 @@ img{
       </ul>
     </section>
   </body>
+  <footer id="certification">*Certification Projekt - ein besonderes Projekt von freecodecamp.org erstellt, um die erlernten Fähigkeiten zu testen und anzuwenden.</footer>
 </html>
