--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@ img{
     p{
       margin-top: 5px;
     }
+      .certification{
+        text-decoration: none;
+        color: red;
+        bolder: solid red 1px;
+        padding: 0,5px;
+        margin: 0,5px;
   </style>
   </head>
  <header>
@@ -96,7 +102,7 @@ img{
       <p>Forms, Tables and HTML Tools</p>
       <ul> 
         <li><a href="feedback_form.html">Hotel Feedback Form</a></li>
-        <li><a href="survey_form.html">Survey Form</a><a href="#certification">Certification Projekt*</a></li>
+        <li><a href="survey_form.html">Survey Form</a>  <a class="certification" href="#certificationEX">Certification Projekt*</a></li>
         <li><a href="exams_table.html">Exams Table</a></li>
         <li><a href="book_katalog.html">Book Katalog</a></li>
       </ul>
@@ -165,5 +171,5 @@ img{
       </ul>
     </section>
   </body>
-  <footer id="certification">*Certification Projekt - ein besonderes Projekt von freecodecamp.org erstellt, um die erlernten Fähigkeiten zu testen und anzuwenden.</footer>
+  <footer id="certificationEX">*Certification Projekt - ein besonderes Projekt von freecodecamp.org erstellt, um die erlernten Fähigkeiten zu testen und anzuwenden.</footer>
 </html>
