--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ img{
       .certification{
         text-decoration: none;
         color: red;
-        bolder: solid red 1px;
+        border: solid red 1px;
       }
   </style>
   </head>
