Add link to HTML Video Player in index.html

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ img{
         <li><a href="html_player.html">HTML Video and Audio Player</a></li>
         <li><a href="video_dispay.html">Video Display using Iframe</a></li>
         <li><a href="video_compilation.html">Video Compilation Page</a></li>
+        <li><a href="html_video_player.html">HTML Video Player</a></li>
       </ul>
       <h3>Semantic HTML</h3>
       <p>Importance of Semantic HTML, Nuanced Semantic Elements, Text and Time Semantic Elements and Specialized Semantic Elements</p>
