Add link to Flexbox Pricing Layout in index.html

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ img{
       <ul>  
         <li><a href="flexbox_gallery.html">Flexbox Photo Gallery</a></li>
           <li><a href="playing-cards.html">Flexbox Playing Cards</a></li>
+          <li><a href="pricing_layout.html">Flexbox Pricing Layout</a></li>
       </ul>
       <h3>Typography</h3>
       <p>CSS Fonds</p>
