Fix style tag in parent_teacher_conference.html

--- a/parent_teacher_converence.html
+++ b/parent_teacher_converence.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parent Teacher Conference Form</title>
-    <styles>
+    <style>
       body {
   background-color: MidnightBlue;
   color: whitesmoke;
@@ -105,7 +105,7 @@ textarea {
   background-color: midnightblue;
 }
 
-    </styles>
+    </style>
   </head>
   <body>
   <main class="container">
