Add JavaScript projects section to index.html

--- a/index.html
+++ b/index.html
@@ -173,6 +173,15 @@ img{
         <li><a href="newspaper-article.html">Newspaper Article</a></li>
       </ul>
     </section>
+    <section>
+      <h2>Projekte mit JavaScript</h2>
+      <p>JavaScript macht die Website intuitiv und benutzbar.</p>
+      <h3>JavaScript Basics</h3>
+      <p>Variablen, Strings, Boolean, Numbers - Definition und Anwendung.</p>
+       <ul>  
+        <li><a href="teacher_chatbot.html">Teacher Chatbot</a></li>
+      </ul>
+    </section>
   </body>
   <footer id="certificationEX">*Certification Projekt - ein besonderes Projekt von freecodecamp.org erstellt, um die erlernten Fähigkeiten zu testen und anzuwenden.</footer>
 </html>
