--- a/index.html
+++ b/index.html
@@ -174,13 +174,8 @@ img{
       </ul>
     </section>
     <section>
-      <h2>Projekte mit JavaScript</h2>
-      <p>JavaScript macht die Website intuitiv und benutzbar.</p>
-      <h3>JavaScript Basics</h3>
-      <p>Variablen, Strings, Boolean, Numbers - Definition und Anwendung.</p>
-       <ul>  
-        <li><a href="teacher_chatbot.html">Teacher Chatbot</a></li>
-      </ul>
+      <p>So jetzt habe ich dir alle meine HTML und CSS Projekte vorgestellt. Weiter gehts unten zu JavaScript.</p>
+      <button></button>
     </section>
   </body>
   <footer id="certificationEX">*Certification Projekt - ein besonderes Projekt von freecodecamp.org erstellt, um die erlernten Fähigkeiten zu testen und anzuwenden.</footer>
